# MessengerAsio

./: .clang-format  .gitignore  client.cpp  info.md  main.cpp  server.cpp
CMake/: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.h  start_client.cpp
sc_main/: client.cpp  database.db  server.cpp
server/: CMakeLists.txt  database.cpp  database.db  database.h  main.cpp  server.cpp  server.h
